--- a/css/mobile.css
+++ b/css/mobile.css
@@ -11,7 +11,9 @@ html, body {
   font-family: "poiret one", sans-serif;
   font-size: 16px;
   padding: 1em;
-  max-width: 50em; }
+  max-width: 50em;
+  height: 100%;
+  width: 100%; }
 
 /* animated classes */
 @keyframes borderAnimation {
@@ -41,7 +43,7 @@ html, body {
   border-left: 1px solid #6797A1;
   bottom: 0;
   right: 0;
-  animation: borderAnimation 1s linear 1s 1 normal forwards; }
+  animation: borderAnimation 1s linear 0s 1 normal forwards; }
 
 /* specific styles */
 #title {
@@ -53,6 +55,9 @@ html, body {
   padding: 2em 0;
   flex-direction: column;
   justify-content: center; }
+  #title.normalMargins {
+    margin: 1em 0 !important;
+    transition: margin 1s ease-in-out; }
 
 #terminal {
   background-color: #444B54;
