--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -24,6 +24,8 @@ html, body
   font-size: 16px
   padding: 1em
   max-width: 50em
+  height: 100%
+  width: 100%
 
 /* animated classes */
 @keyframes borderAnimation
@@ -56,7 +58,7 @@ html, body
   border-left: 1px solid $blue
   bottom: 0
   right: 0
-  animation: borderAnimation $timing linear $timing 1 normal forwards
+  animation: borderAnimation $timing linear 0s 1 normal forwards
 
 /* specific styles */
 #title
@@ -68,6 +70,10 @@ html, body
   padding: 2em 0
   flex-direction: column
   justify-content: center
+
+  &.normalMargins
+    margin: 1em 0 !important
+    transition: margin $timing ease-in-out
 
   &::before
     @extend .animatedBorderBefore
