--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,12 +4,17 @@
 * {
   box-sizing: border-box; }
 
+a {
+  color: #444444; }
+
 html, body {
   margin: 0 auto;
   padding: 0;
   background-color: white;
-  font-family: "poiret one", sans-serif;
+  font-family: "quicksand", sans-serif;
   font-size: 16px;
+  font-weight: 300;
+  color: #444444;
   padding: 1em;
   max-width: 50em;
   height: 100%;
@@ -32,15 +37,15 @@ html, body {
   position: absolute; }
 
 .animatedBorderBefore, #title::before {
-  border-top: 1px solid #6797A1;
-  border-right: 1px solid #6797A1;
+  border-top: 1px solid #73B1D6;
+  border-right: 1px solid #73B1D6;
   top: 0;
   left: 0;
   animation: borderAnimation 1s linear 0s 1 normal forwards; }
 
 .animatedBorderAfter, #title::after {
-  border-bottom: 1px solid #6797A1;
-  border-left: 1px solid #6797A1;
+  border-bottom: 1px solid #73B1D6;
+  border-left: 1px solid #73B1D6;
   bottom: 0;
   right: 0;
   animation: borderAnimation 1s linear 0s 1 normal forwards; }
@@ -48,8 +53,8 @@ html, body {
 /* specific styles */
 #title {
   position: relative;
-  font-weight: normal;
-  color: #6797A1;
+  font-weight: 300;
+  color: #73B1D6;
   text-align: center;
   display: flex;
   padding: 2em 0;
@@ -60,7 +65,7 @@ html, body {
     transition: margin 1s ease-in-out; }
 
 #terminal {
-  background-color: #444B54;
+  background-color: #444444;
   color: #F2F8EA;
   padding: 0.5em;
   border-radius: 0.25em;
@@ -81,5 +86,24 @@ html, body {
   padding-left: 0.2em; }
   #cursor.blinking {
     animation: blinkAnimation 2s infinite; }
+
+fieldset {
+  border: 1px solid #73B1D6;
+  margin: 2em 0; }
+  fieldset legend {
+    color: #73B1D6;
+    font-weight: 500; }
+  fieldset .project {
+    box-shadow: #444444 0 0 1px;
+    padding: 0;
+    margin: 2em 1em;
+    display: flex;
+    flex-direction: column;
+    background-color: #F6F7F2;
+    text-decoration: none; }
+    fieldset .project h3, fieldset .project p {
+      margin: 0.5em; }
+    fieldset .project .projectImage {
+      width: 100%; }
 
 /*# sourceMappingURL=mobile.css.map */
