--- a/css/mobile.css
+++ b/css/mobile.css
@@ -16,16 +16,14 @@ html, body {
   font-weight: 300;
   color: #444444;
   padding: 1em;
-  max-width: 50em;
-  height: 100%;
-  width: 100%; }
+  max-width: 50em; }
 
 /* animated classes */
 @keyframes borderAnimation {
   0% {
     width: 0;
     height: 0; }
-  60% {
+  50% {
     width: 100%;
     height: 0%; }
   100% {
@@ -59,10 +57,16 @@ html, body {
   display: flex;
   padding: 2em 0;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center;
+  margin: 1em 0; }
   #title.normalMargins {
     margin: 1em 0 !important;
     transition: margin 1s ease-in-out; }
+  #title #profileImage {
+    width: 5em;
+    height: 5em;
+    margin-bottom: 1em; }
 
 #terminal {
   background-color: #444444;
