--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -17,15 +17,13 @@ html, body
   color: $darkgrey
   padding: 1em
   max-width: 50em
-  height: 100%
-  width: 100%
 
 /* animated classes */
 @keyframes borderAnimation
   0%
     width: 0
     height: 0
-  60%
+  50%
     width: 100%
     height: 0%
   100%
@@ -63,6 +61,8 @@ html, body
   padding: 2em 0
   flex-direction: column
   justify-content: center
+  align-items: center
+  margin: 1em 0
 
   &.normalMargins
     margin: 1em 0 !important
@@ -73,6 +73,11 @@ html, body
 
   &::after
     @extend .animatedBorderAfter
+
+  #profileImage
+    width: 5em
+    height: 5em
+    margin-bottom: 1em
 
 #terminal
   background-color: $darkgrey
