--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -120,6 +120,7 @@ fieldset
     flex-direction: column
     background-color: $coolblue
     text-decoration: none
+    position: relative
 
     h3, p
       margin: 0.5em
