--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -124,6 +124,10 @@ fieldset
 
     h3, p
       margin: 0.5em
+ 
+    .linkP
+      font-size: 0.6em
+      margin: 0.87em
 
     .projectImage
       width: 100%
