--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -7,7 +7,7 @@
 a
   color: $darkgrey
 
-html, body 
+html, body
   margin: 0 auto
   padding: 0
   background-color: white
@@ -17,6 +17,7 @@ html, body
   color: $darkgrey
   padding: 1em
   max-width: 50em
+  max-height: 100%
 
 /* animated classes */
 @keyframes borderAnimation
@@ -100,7 +101,7 @@ html, body
 #cursor
   color: transparent
   padding-left: 0.2em
-  
+
   &.blinking
     animation: blinkAnimation 2s infinite
 
@@ -124,10 +125,18 @@ fieldset
 
     h3, p
       margin: 0.5em
- 
+
     .linkP
       font-size: 0.6em
       margin: 0.87em
 
     .projectImage
       width: 100%
+
+.profileBadge
+  margin: 1em 0
+  display: block
+  text-align: center
+
+  img
+    margin: 0 auto
