updated site with more modern feel

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,12 +1,20 @@
 /* color pallette courtesy of: http://flatcolors.net/palette/460-iam-truckburger */
 /* from http://flatcolors.net/palette/745-urban-humanity */
+body {
+  margin: 2em auto; }
+
 fieldset .project {
-  flex-direction: row; }
+  flex-direction: row;
+  max-width: 100%; }
   fieldset .project .projectInfo {
     font-family: "source code pro", courier new;
-    padding: 1em; }
+    padding: 1em;
+    flex-basis: calc(100% - 15em);
+    flex-grow: 0;
+    flex-shrink: 0; }
   fieldset .project .projectImage {
     width: 15em;
-    height: 15em; }
+    height: 15em;
+    flex-grow: 0; }
 
 /*# sourceMappingURL=desktop.css.map */
