--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,17 +7,28 @@
 a {
   color: #444444; }
 
-html, body {
-  margin: 0 auto;
+body {
+  margin: 0;
   padding: 0;
-  background-color: white;
   font-family: "quicksand", sans-serif;
+  background-color: rgba(255, 255, 255, 0.95);
   font-size: 16px;
   font-weight: 300;
   color: #444444;
   padding: 1em;
   max-width: 50em;
   max-height: 100%; }
+
+html {
+  padding: 0;
+  margin: 0;
+  max-width: 100%;
+  max-height: 100%;
+  background-image: url("../img/desk.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed; }
 
 /* animated classes */
 @keyframes borderAnimation {
@@ -67,7 +78,8 @@ html, body {
   #title #profileImage {
     width: 5em;
     height: 5em;
-    margin-bottom: 1em; }
+    margin-bottom: 1em;
+    border-radius: 100%; }
 
 #terminal {
   background-color: #444444;
@@ -101,12 +113,13 @@ fieldset {
   fieldset .project {
     box-shadow: #444444 0 0 1px;
     padding: 0;
-    margin: 2em 1em;
     display: flex;
     flex-direction: column;
     background-color: #F6F7F2;
     text-decoration: none;
-    position: relative; }
+    position: relative;
+    max-width: 25em;
+    margin: 2em auto; }
     fieldset .project h3, fieldset .project p {
       margin: 0.5em; }
     fieldset .project .linkP {
