--- a/sass/desktop.sass
+++ b/sass/desktop.sass
@@ -2,9 +2,10 @@
 
 body
   margin: 2em auto
-  padding: 2em 5em
+  padding: 2em
 
 fieldset
+  padding: 0 2em
   
   .project
     flex-direction: row
