--- a/sass/desktop.sass
+++ b/sass/desktop.sass
@@ -22,3 +22,8 @@ fieldset
       width: 15em
       height: 15em
       flex-grow: 0
+
+  &#minorProjects
+    .project
+      .projectInfo
+        flex-basis: 100%
