--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -154,10 +154,32 @@ fieldset
     .projectImage
       width: 100%
 
-.profileBadge
-  margin: 1em 0
-  display: block
+#contact
   text-align: center
 
-  img
-    margin: 0 auto
+.profileBadge
+  text-decoration: none
+  text-align: center
+
+  .socialMedia
+    box-sizing: content-box
+    transition: all 0.2s
+    cursor: pointer
+    padding: 0.25em
+    font-size: 3em
+    vertical-align: baseline
+
+    &:hover
+      font-size: 4.5em
+      padding: 0
+
+    &.fa-github-alt:hover
+      color: #6e5494
+    &.fa-stack-overflow:hover
+      color: #f48024
+    &.fa-jsfiddle:hover
+      color: #2795ee
+    &.fa-code:hover
+      color: #b92521
+    &.fa-calculator:hover
+      color: #89cf49
